docs: Uptade CategoriesController documentation
