# app/Http/Controllers/Category/CategoriesController.php
@@ -15,13 +15,35 @@ class CategoriesController extends Controller
         $this->listCategories = $listCategories;
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/categories",
+     *     summary="Categories listing",
+     *     description="Endpoint to list categories",
+     *     tags={"Categories"},
+     *     security={{ "bearerAuth":{} }},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Categories listing successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="Serviços"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Failed to list categories",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="string", example="Unable to list categories")
+     *         )
+     *     )
+     * )
+     */
     public function index()
     {
         try {
             $response = $this->listCategories->execute();
             return response()->json(
                 [
-
                     "categories" => $response
                 ]
             );
