# app/Http/Controllers/Controller.php
@@ -6,7 +6,16 @@ namespace App\Http\Controllers;
  * @OA\Info(
  *     title="OpenPersonalFinanceAPI",
  *     version="1.0.0",
- * )
+ * ),
+ *   @OA\SecurityScheme(
+ *       securityScheme="bearerAuth",
+ *       in="header",
+ *       name="bearerAuth",
+ *       type="http",
+ *       scheme="bearer",
+ *       bearerFormat="JWT",
+ *    ),
+ *
  */
 abstract class Controller
 {
